Added : Content header

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,5 +21,18 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content">
+            <div class="emp-detail-text table-hdr">
+                Employee Details <div class="emp-count">0</div>
+            </div>
+            <a href="../pages/addressBookForm.html" class="add-button">
+            <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+        </div>
+        <div class="table-main">
+            <table id="table-display" class="table">
+            </table>
+        </div>
+    </div>
 </body>
 </html>
