--- a/pages/home.html
+++ b/pages/home.html
@@ -24,10 +24,10 @@
     <div class="main-content">
         <div class="header-content">
             <div class="emp-detail-text table-hdr">
-                Employee Details <div class="emp-count">0</div>
+                Employee Details <div class="emp-count">10</div>
             </div>
             <a href="../pages/addressBookForm.html" class="add-button">
-            <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+            <img src="../Assets/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
             <table id="table-display" class="table">
