Added : Remove contact from address book entries

--- a/pages/addressBookForm.html
+++ b/pages/addressBookForm.html
@@ -85,8 +85,8 @@
             </div>
         </form>
     </div>
-</body>
-        <script src="../js/addressBookForm.js"></script>
-        <script src="../js/addressBook.js"></script>
+        <script src="../js/addreessBookForm.js"></script>
+        <script src="../js/AddressBook.js"></script>
+        <script src="../js/siteProperties.js"></script>
 </html>
 </body>
