--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
-  
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -11,6 +11,7 @@
     <script src="../js/home.js"></script>
     <link rel="stylesheet" href="../css/home.css">
 </head>
+
 <body>
     <header class="header-content header">
         <div class="logo-content">
@@ -27,12 +28,16 @@
                 Employee Details <div class="emp-count">10</div>
             </div>
             <a href="../pages/addressBookForm.html" class="add-button">
-            <img src="../Assets/add-24px.svg" alt="">Add User</a>
+                <img src="../Assets/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
             <table id="table-display" class="table">
             </table>
         </div>
     </div>
+    <script src="../js/home.js"></script>
+    <script src="../js/AddressBook.js"></script>
+    <script src="../js/siteProperties.js"></script>
 </body>
+
 </html>
