--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,7 @@
     <div class="main-content">
         <div class="header-content">
             <div class="emp-detail-text table-hdr">
-                Employee Details <div class="emp-count">10</div>
+                Employee Details <div class="emp-count">0</div>
             </div>
             <a href="../pages/addressBookForm.html" class="add-button">
                 <img src="../Assets/add-24px.svg" alt="">Add User</a>
@@ -38,6 +38,7 @@
     <script src="../js/home.js"></script>
     <script src="../js/AddressBook.js"></script>
     <script src="../js/siteProperties.js"></script>
+    <script src="../js/utility.js"></script>
 </body>
 
 </html>
